--- a/index.html
+++ b/index.html
@@ -1,73 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
-  Features
-  Team
-  Sign In
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <nav>
+      <img src="/images/logo.svg" alt="style" />
+      <div>
+        <div>Features</div>
+        <div>Team</div>
+        <div>Sign in</div>
+      </div>
+    </nav>
+    <main>
+      <div>
+        <h2>All your files in one secure location, accessible anywhere.</h2>
+        <p>
+          Fylo stores your most important files in one secure location. Access
+          them wherever you need, share and collaborate with friends, family,
+          and co-workers.
+        </p>
+        <form action="">
+          <input type="email" placeholder="Enter your email..." />
+          <button type="submit">Get Started</button>
+        </form>
+      </div>
 
-  All your files in one secure location, accessible anywhere.
+      <div>
+        <h2>Stay productive, wherever you are</h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs. Securely share files and
+          folders with friends, family and colleagues for live collaboration. No
+          email attachments required!
+        </p>
+        <div>See how Fylo works</div>
+      </div>
+      <div>
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <div>
+          <img src="/images/avatar-testimonial.jpg" />
+          <div>
+            <div>Kyle Burton</div>
+            <div>Founder & CEO, Huddle</div>
+          </div>
+        </div>
+      </div>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+      <div>
+        <div>
+          <h3>Get early access today</h3>
+          <p>
+            It only takes a minute to sign up and our free starter tier is
+            extremely generous. If you have any questions, our support team
+            would be happy to help you.
+          </p>
+        </div>
+        <form action="">
+          <input type="email" placeholder="email@example.com" />
+          <button type="submit">Get Started For Free</button>
+        </form>
+      </div>
+    </main>
 
-  Get Started
+    About Us Jobs Press Blog Contact Us Terms Privacy
 
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <footer>
+      <div>
+        <img src="/images/logo.svg" alt="" />
+        <div>
+          <img src="/images/icon-phone.svg" alt="" />
+          <div>Phone: +1-543-123-4567</div>
+        </div>
+        <div>
+          <img src="/images/icon-email.svg" alt="" />
+          <div>example@fylo.com</div>
+        </div>
+      </div>
+      <div>
+        <ul>
+          <li>About Us</li>
+          <li>Jobs</li>
+          <li>Press</li>
+          <li>Blog</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li>Contact Us</li>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </div>
+      <div>facebook twitter instagram</div>
+    </footer>
+  </body>
 </html>
