--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
+    <nav class="topnav container">
       <img src="/images/logo.svg" alt="style" />
       <div>
         <div>Features</div>
@@ -26,45 +26,67 @@
       </div>
     </nav>
     <main>
-      <div>
-        <h2>All your files in one secure location, accessible anywhere.</h2>
-        <p>
-          Fylo stores your most important files in one secure location. Access
-          them wherever you need, share and collaborate with friends, family,
-          and co-workers.
-        </p>
-        <form action="">
-          <input type="email" placeholder="Enter your email..." />
-          <button type="submit">Get Started</button>
-        </form>
-      </div>
-
-      <div>
-        <h2>Stay productive, wherever you are</h2>
-        <p>
-          Never let location be an issue when accessing your files. Fylo has you
-          covered for all of your file storage needs. Securely share files and
-          folders with friends, family and colleagues for live collaboration. No
-          email attachments required!
-        </p>
-        <div>See how Fylo works</div>
-      </div>
-      <div>
-        <p>
-          Fylo has improved our team productivity by an order of magnitude.
-          Since making the switch our team has become a well-oiled collaboration
-          machine.
-        </p>
-        <div>
-          <img src="/images/avatar-testimonial.jpg" />
-          <div>
-            <div>Kyle Burton</div>
-            <div>Founder & CEO, Huddle</div>
-          </div>
+      <div class="content container">
+        <div class="content-column column-text">
+          <h2>All your files in one secure location, accessible anywhere.</h2>
+          <p>
+            Fylo stores your most important files in one secure location. Access
+            them wherever you need, share and collaborate with friends, family,
+            and co-workers.
+          </p>
+          <form action="">
+            <input type="email" placeholder="Enter your email..." />
+            <button type="submit">Get Started</button>
+          </form>
+        </div>
+        <div class="content-column">
+          <img src="/images/illustration-1.svg" alt="" />
         </div>
       </div>
 
-      <div>
+      <div class="curve">
+        <img src="/images/bg-curve-desktop.svg" alt="" />
+      </div>
+
+      <div class="content container content-second">
+        <div class="content-column">
+          <div class="">
+            <h2>Stay productive, wherever you are</h2>
+            <p>
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your file storage needs.
+            </p>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required!
+            </p>
+            <div class="fylolink">
+              See how Fylo works <img src="/images/icon-arrow.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <img src="/images/icon-quotes.svg" alt="" />
+            <p>
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="avatar">
+              <div><img src="/images/avatar-testimonial.jpg" /></div>
+
+              <div>
+                <div><strong>Kyle Burton</strong></div>
+                <div><small>Founder & CEO, Huddle</small></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content-column">
+          <img src="/images/illustration-2.svg" alt="" />
+        </div>
+      </div>
+
+      <div class="calltoaction">
         <div>
           <h3>Get early access today</h3>
           <p>
@@ -73,43 +95,58 @@
             would be happy to help you.
           </p>
         </div>
-        <form action="">
-          <input type="email" placeholder="email@example.com" />
-          <button type="submit">Get Started For Free</button>
-        </form>
+        <div>
+          <form action="">
+            <input type="email" placeholder="email@example.com" />
+            <button type="submit">Get Started For Free</button>
+          </form>
+        </div>
       </div>
     </main>
 
-    About Us Jobs Press Blog Contact Us Terms Privacy
-
-    <footer>
+    <footer class="fylofooter">
       <div>
-        <img src="/images/logo.svg" alt="" />
-        <div>
+        <img class="fylofooter__logo" src="/images/logo.svg" alt="" />
+        <div class="fylofooter__contactinfo">
           <img src="/images/icon-phone.svg" alt="" />
           <div>Phone: +1-543-123-4567</div>
         </div>
-        <div>
+        <div class="fylofooter__contactinfo">
           <img src="/images/icon-email.svg" alt="" />
           <div>example@fylo.com</div>
         </div>
       </div>
-      <div>
-        <ul>
-          <li>About Us</li>
-          <li>Jobs</li>
-          <li>Press</li>
-          <li>Blog</li>
-        </ul>
+
+      <ul class="fylofooter__list">
+        <li>About Us</li>
+        <li>Jobs</li>
+        <li>Press</li>
+        <li>Blog</li>
+      </ul>
+
+      <ul class="fylofooter__list">
+        <li>Contact Us</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+      </ul>
+
+      <div class="fylofooter__icons">
+        <div class="fylofooter__icon">
+          <i class="fa-brands fa-facebook-f fa-lg"></i>
+        </div>
+
+        <div class="fylofooter__icon">
+          <i class="fa-brands fa-twitter fa-lg"></i>
+        </div>
+
+        <div class="fylofooter__icon">
+          <i class="fa-brands fa-instagram fa-lg"></i>
+        </div>
       </div>
-      <div>
-        <ul>
-          <li>Contact Us</li>
-          <li>Terms</li>
-          <li>Privacy</li>
-        </ul>
-      </div>
-      <div>facebook twitter instagram</div>
     </footer>
   </body>
+  <script
+    src="https://kit.fontawesome.com/5bd7010b1c.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
