--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
         </div>
       </div>
 
-      <div class="curve">
+      <div class="curve curve-lg">
         <img src="/images/bg-curve-desktop.svg" alt="" />
+      </div>
+
+      <div class="curve curve-sm">
+        <img src="/images/bg-curve-mobile.svg" alt="" />
       </div>
 
       <div class="content container content-second">
